# ohtu-2022-viikko2

./: jokumuutos.txt
poetry-web/: pyproject.toml
verkkokauppa-1/src/: kauppa.py
viikko2/project-reader/src/: project_reader.py
