[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["ElectricShakuhachi <haavistoaaro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
